Admin Places CRUD, User side folder and file structure, User side home

--- a/www/admin/views/login.html
+++ b/www/admin/views/login.html
@@ -1,5 +1,5 @@
 <div class="full-height" md-colors="{background: 'grey-800'}">
-    <div class="flex-center-center">
+    <div class="flex-center-center layout-margin">
         <form name="loginForm" ng-submit="vm.login()">
             <md-card id="loginCard" md-colors="{background: 'orange-A200', color: 'grey-800'}">
                 <md-card-title>
@@ -25,7 +25,7 @@
                         </md-input-container>
                 </md-card-content>
                 <md-card-actions layout="row" layout-align="center center">
-                    <md-button class="md-raised md-primary" ng-disabled="loginForm.$invalid" type="submit">Primary</md-button>
+                    <md-button class="md-raised md-primary" ng-disabled="loginForm.$invalid" type="submit">Submit</md-button>
                 </md-card-actions>
             </md-card>
         </form>
