--- a/www/admin/views/login.html
+++ b/www/admin/views/login.html
@@ -1,5 +1,5 @@
 <div class="full-height" md-colors="{background: 'grey-800'}">
-    <div class="flex-center-center layout-margin">
+    <div class="flex-center-center">
         <form name="loginForm" ng-submit="vm.login()">
             <md-card id="loginCard" md-colors="{background: 'orange-A200', color: 'grey-800'}">
                 <md-card-title>
