--- a/www/home/style.css
+++ b/www/home/style.css
@@ -2,7 +2,13 @@ div{
     box-sizing: border-box;
 }
 .full-height{
-    height:100%;
+    height: calc(100vh - 64px);
+}
+.background{
+    background-image: url('./home-bg.jpg');
+    background-attachment: fixed;
+    background-size:cover;
+    min-height:100%;
 }
 .fa-ng{
     height:auto;
@@ -26,6 +32,14 @@ div{
     margin: 15px;
 }
 
+@media only screen and (max-width: 450px){
+    #loginCard{
+        width: 100%;
+        padding: 15px;
+        margin: 15px;
+    }
+}
+
 .fixed-navbar{
     position:fixed;
     top: 0; left:0;
@@ -38,4 +52,24 @@ div{
 .place-card{
     width: 300px;
     max-width: 100%;
+}
+
+
+.table-filter{
+    margin-bottom: 10px;
+    border: 1px solid grey;
+    height: 25px;
+    padding: 0 5px;
+}
+.table-filter:focus{
+    outline-width: 0;
+}
+.table-header{
+    padding: 10px 0;
+    cursor: pointer;
+}
+
+
+md-content{
+    background-color:transparent;
 }
