--- a/www/home/views/places.html
+++ b/www/home/views/places.html
@@ -1,6 +1,9 @@
 <div flex-gt-md="80" flex-offset-gt-md="10" class="background">
-    <md-content layout="row" layout-padding layout-wrap layout-align="center start">
+    <md-content layout="row" layout-padding layout-wrap layout-align="center">
             <md-card ng-repeat="place in vm.items" class="place-card">
+                <ng-map id="{{place._id}}" zoom="11" center="{{place.address}}">
+                    <marker position="{{place.address}}" title="{{place.address}}"></marker>
+                </ng-map>
                 <md-card-title>
                     <md-card-title-text>
                     <span class="md-headline">{{place.name}}</span>
