--- a/www/home/style.css
+++ b/www/home/style.css
@@ -53,7 +53,9 @@ div{
     width: 300px;
     max-width: 100%;
 }
-
+.capitalize {
+    text-transform: capitalize;
+ }
 
 .table-filter{
     margin-bottom: 10px;
