--- a/www/home/views/mySuggestions.html
+++ b/www/home/views/mySuggestions.html
@@ -18,7 +18,6 @@
                                     placeholder=""
                                     value=""
                                     ng-model="vm.newItem.address" name="address" required
-                                    types="vm.gmaptypes"
                                     on-place-changed="vm.placeChanged()" />
                             <div ng-messages="newPlaceForm.address.$error">
                                 <div ng-message="required">This is required.</div>
@@ -48,7 +47,7 @@
                 </form>
             </md-card>
     <md-card flex="40" flex-xs="100">
-        <ng-map zoom="16">
+        <ng-map ng-if="vm.marker" id="suggestion-map" zoom="16" center="{{vm.marker}}">
                 <marker position="{{vm.marker}}" title="{{vm.marker}}"></marker>
         </ng-map>
     </md-card>
