--- a/www/home/views/placeItem.html
+++ b/www/home/views/placeItem.html
@@ -3,7 +3,7 @@
     <md-content layout="column" >
         <div layout="row" layout-wrap layout-align="start">
             <md-card flex="50" flex-xs="100">
-                <ng-map zoom="11" center="{{vm.place.address}}">
+                <ng-map ng-if="vm.place.address" id="place-item-map" zoom="16" center="{{vm.place.address}}">
                     <marker position="{{vm.place.address}}" title="{{vm.place.address}}"></marker>
                 </ng-map>
                 <md-card-title>
