--- a/www/home/views/places.html
+++ b/www/home/views/places.html
@@ -1,7 +1,7 @@
 
 
 <div flex-gt-md="80" flex-offset-gt-md="10">
-    <md-content layout="row" layout-padding layout-wrap layout-align="center start">
+    <md-content layout="row" layout-padding layout-wrap layout-align="start">
             <md-card class="place-card">
                 <div layout="row" layout-padding layout-wrap layout-align="center">
                     <md-input-container flex="100">
